gcc/testsuite/gdc.test/compilable/test11980.d
void start()
{
	pragma(startaddress, start);
}
pragma(startaddress, start);
