gcc/testsuite/gdc.test/fail_compilation/failsafeb.d

void function() @system sysfuncptr;

@safe
void callingsystem()
{
    sysfuncptr();
}
